[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gun.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 1, 0.203922, 1 )

[sub_resource type="CapsuleShape" id=6]
height = 2.90703

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereShape" id=5]
radius = 70.0

[node name="Enemy" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.37292, 0 )
script = ExtResource( 1 )
Bullet = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.0148 )
enabled = true
cast_to = Vector3( 0, -1, -200 )

[node name="Muzzle" type="Position3D" parent="RayCast"]
transform = Transform( -1, 0, -4.37114e-08, 0, 1, 0, 4.37114e-08, 0, -1, 1.25809, 0.505602, -0.270352 )

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Goggles" type="MeshInstance" parent="."]
transform = Transform( 0.84, 0, 0, 0, 0.28, 0, 0, 0, 0.2, 0.0791552, 2, -0.688832 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Sight_Range" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Sight_Range"]
shape = SubResource( 5 )

[node name="Eyes" type="Spatial" parent="."]

[node name="Gun" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.25019, 0, -0.865603 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Sight_Range" to="." method="_on_Sight_Range_body_entered"]
[connection signal="body_exited" from="Sight_Range" to="." method="_on_Sight_Range_body_exited"]
